--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 
                         <li class="nav-item  mr-lg-3 mt-lg-0 mt-3">
 
-                            <a class="nav-link" href="healthbot.html">about</a>
+                            <a class="nav-link" href="healthbot.html">healthbot</a>
 
                         </li>
 
